<resources>
    <string name="app_name">StoryApp</string>
    <string name="login_welcome">Welcome back !</string>
    <string name="login_to_continue">Login to continue.</string>
    <string name="btn_login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="btn_register">Register</string>
    <string name="halaman_login">Image in login page</string>
    <string name="gambar_di_halaman_register">Image in register page</string>
    <string name="welcome_register">Let\'s prepare your journey!</string>
    <string name="ceate_new_account">Ceate new account.</string>
    <string name="name">Name</string>
    <string name="ok_dialog_button">Ok</string>
    <string name="error_message">Something went wrong, try again.</string>
    <string name="success_message">"Successful created</string>
    <string name="setting_language">Setting language</string>
    <string name="change_language">Change Language</string>
    <string name="click_to_add_your_story">click to add your story</string>
    <string name="image_story_list">Click image for the detail</string>
    <string name="description">description</string>
    <string name="date">25/25/25</string>
    <string name="here_to_logout">here to logout</string>
    <string name="logout">logout</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="create_post">Create Post</string>
    <string name="no_media_selected">No media selected</string>
    <string name="upload_story">Upload Story</string>
    <string name="detail_story">Detail Story</string>
    <string name="created_by_salsabila">Created by @Salsabila</string>
    <string name="invalid_input_message">Invalid input. please check again.</string>
    <string name="account_already_register">Account already register</string>
    <string name="user_not_found_401">User not found. or not matched password. try again.</string>
    <string name="youre_image_placeholder">Youre image placeholder</string>
    <string name="what_are_you_thinking">What are you thinking?</string>
    <string name="home">Home</string>
    <string name="map">Maps</string>
    <string name="invalid_email">Use valid email</string>
    <string name="invalid_password">Password at least 8 characters</string>
    <string name="style_parsing_failed">Style parsing failed.</string>
    <string name="error_cannot_find_style_maps">Error. cannot find style</string>
    <string name="share_your_location">Share your location</string>
    <string name="location_is_not_found">Location is not found. please try again</string>
    <string name="retry">Retry</string>
</resources>