<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.login.LoginActivity">

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="32dp">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:alpha="0"
                android:text="@string/login_welcome"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:alpha="100" />

            <TextView
                android:id="@+id/tvLoginContinue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:alpha="0"
                android:text="@string/login_to_continue"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWelcome"
                tools:alpha="100" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="0dp"
                android:layout_height="240dp"
                android:layout_marginHorizontal="32dp"
                android:layout_marginVertical="20dp"
                android:alpha="0"
                android:contentDescription="@string/halaman_login"
                android:src="@drawable/asset_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvLoginContinue"
                tools:alpha="100" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_login_email_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:alpha="0"
                android:hint="@string/email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image"
                app:startIconDrawable="@drawable/ic_email_24"
                tools:alpha="100">

                <com.example.storyapp.ui.customView.MyEditTextEmail
                    android:id="@+id/ed_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ed_login_password_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="20dp"
                android:alpha="0"
                android:hint="@string/password"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_login_email_layout"
                app:startIconDrawable="@drawable/ic_password_24"
                tools:alpha="100">

                <com.example.storyapp.ui.customView.MyEditTextPassword
                    android:id="@+id/ed_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:alpha="0"
                android:backgroundTint="@color/navy"
                android:text="@string/btn_login"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/btn_register"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ed_login_password_layout"
                tools:alpha="100" />

            <Button
                android:id="@+id/btn_register"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:alpha="0"
                android:text="@string/btn_register"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_login"
                app:layout_constraintTop_toBottomOf="@id/ed_login_password_layout"
                tools:alpha="100" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
