<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingVertical="20dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_story"
        style="@style/Widget.App.CardView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="10dp"
        app:cardBackgroundColor="?attr/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvCreatedAt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:text="@string/date"
                android:textColor="?attr/colorOnPrimary"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/banner_dicoding"
                android:contentDescription="@string/image_story_list"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                tools:layout_editor_absoluteX="10dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>